--- a/client/src/pages/ad/ad.css
+++ b/client/src/pages/ad/ad.css
@@ -1,34 +1,50 @@
 .add-ad,
-.ad {
+.ad,
+.edit-ad {
   min-height: calc(100vh - var(--difference-value));
   display: flex;
   justify-content: center;
-  background-color: #f8f9fa;
+  background-color: #f0f2f5;
   padding: 20px;
 }
 .ad-wrapper {
   display: flex;
+  gap: 20px;
 }
 .ad-info-section {
   flex: 7;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
+  max-width: 800px;
 }
 
 .ad-photos {
-  width: 676px;
-  height: 350px;
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .swiper {
-  width: 676px;
+  width: 100%;
   height: 100%;
 }
 
 .swiper-slide {
-  background-color: #eee;
+  background-color: #fff;
   height: auto !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper-pagination {
+  width: max-content !important;
+  border-radius: 14px;
+  padding: 0 10px;
+  background-color: #ffffffcc;
+  right: 50%;
 }
 
 .ad-photo {
@@ -36,105 +52,193 @@
   width: 100%;
   height: 100% !important;
   object-fit: contain;
-  border-radius: 15px;
+  border-radius: 10px;
+}
+
+.ad-options {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-start;
+}
+
+.ad-option {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.ad-status {
+  color: white;
+  background-color: #4caf50;
+  cursor: unset;
+}
+
+.ad-edit {
+  background-color: #ffc107;
+  color: white;
+  text-decoration: none;
+}
+
+.ad-delete {
+  background-color: #f44336;
+  color: white;
 }
 
 .ad-details {
   display: flex;
-  padding: 10px;
-  border: 1px solid var(--gray-color);
-  border-radius: 5px;
-  line-height: 1;
-  gap: 10px;
   flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .ad-details-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .ad-details-bottom {
-  font-size: 15px;
-  line-height: 1.1;
-  color: var(--secondary-color);
   display: flex;
   flex-direction: column;
   gap: 5px;
+  font-size: 15px;
+  color: #757575;
 }
 .ad-title {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 24px;
+  color: #333;
 }
+
 .ad-price {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 28px;
   color: var(--primary-color);
 }
 
-.rotated-table {
-  border-collapse: collapse;
+.ad-address,
+.ad-duration {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.ad-specifications {
   background-color: white;
-  width: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.ad-specifications h3 {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #333;
+}
+
+.rotated-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .rotated-table th,
 .rotated-table td {
-  border: 1px solid #ccc;
   padding: 10px;
+  border: 1px solid #e0e0e0;
 }
 
 .rotated-table th {
-  background-color: #f9f9f9;
+  background-color: #f5f5f5;
   font-weight: bold;
+  color: #333;
 }
 
 .rotated-table td {
-  background-color: #fff;
-  width: 50%;
+  background-color: white;
+  color: #757575;
+}
+
+.ad-description {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.ad-description h3 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #333;
 }
 
 .contact-info-section {
-  flex: 5;
+  flex: 3;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
-  position: relative;
 }
 
 .contact-info-wrapper {
   position: sticky;
   top: 90px;
+  width: 100%;
 }
 
 .contact-info {
-  border: 1px solid var(--gray-color);
-  border-radius: 5px;
-  padding: 10px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
+
 .contact-info-title {
   text-align: center;
+  margin-bottom: 20px;
+  font-size: 18px;
+  color: #333;
 }
+
 .seller-name {
   font-size: 18px;
   font-weight: bold;
+  margin-bottom: 10px;
 }
+
 .seller-profile {
-  font-size: 12px;
-  color: var(--primary-color);
+  font-size: 14px;
+  color: #1e88e5;
   cursor: pointer;
+  margin-bottom: 10px;
 }
+
 .seller-mobile {
-  background-color: var(--primary-color);
-  border-radius: 5px;
-  color: #fff;
   display: flex;
   align-items: center;
-  justify-content: center;
-  cursor: pointer;
   gap: 5px;
-  padding: 0 10px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #1e88e5;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  justify-content: center;
 }
 
 /* Add Ad Styles */
@@ -295,14 +399,173 @@
   display: none;
 }
 
+/* edit add styles */
+
+.edit-ad-wrapper {
+  background: white;
+  border: 1px solid var(--gray-color);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+}
+
+.edit-ad-page-title {
+  margin: 0 0 10px 0;
+  text-align: center;
+}
+
+.edit-ad-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.edit-ad-select-wrapper {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.quantity-wrapper {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  flex: 1;
+  font-size: 12px;
+}
+
+.select-ad-category,
+.select-ad-sell-type,
+.select-ad-status,
+.quantity-input,
+.select-ad-province,
+.select-ad-city {
+  padding: 10px;
+  font-family: var(--font-family);
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid var(--gray-color);
+  border-radius: 5px;
+  background-color: white;
+  flex: 1;
+  min-width: 120px; /* Ensure a minimum width */
+}
+
+.edit-ad-title,
+.edit-ad-desc,
+.edit-ad-mobile,
+.edit-ad-price,
+.edit-ad-part-name,
+.edit-ad-address {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-ad-label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.edit-ad-input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid var(--gray-color);
+  border-radius: 5px;
+  background-color: white;
+}
+
+.edit-ad-photos {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-ad-photo {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.edit-ad-photos-display {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.preview-image-container {
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
+
+.preview-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 1px solid var(--gray-color);
+  padding: 5px;
+  background: #f9f9f9;
+  border-radius: 5px;
+}
+
+.remove-image-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.add-image-container {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px dashed var(--primary-color);
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #f9f9f9;
+}
+
+.add-image-plus {
+  font-size: 24px;
+  color: var(--primary-color);
+}
+
+.edit-ad-form-btn {
+  background-color: var(--primary-color);
+  font-family: var(--font-family);
+  width: fit-content;
+  align-self: center;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.edit-ad-form-btn:hover {
+  background-color: #b30000;
+}
+
+.dropzone.hidden-dropzone {
+  display: none;
+}
+
 @media (max-width: 610px) {
   .add-ad-wrapper {
     padding: 10px;
-  }
-
-  .preview-image-container {
-    width: 80px;
-    height: 80px;
   }
 
   .add-ad-form-btn {
@@ -310,7 +573,8 @@
     width: 100%;
   }
 
-  .add-ad-select-wrapper {
+  .add-ad-select-wrapper,
+  .edit-ad-select-wrapper {
     flex-direction: column;
   }
 }
