--- a/client/src/pages/search/search.css
+++ b/client/src/pages/search/search.css
@@ -107,7 +107,6 @@
 /* Search Item */
 .search-item {
   display: flex;
-  text-align: right;
   align-items: center;
   background-color: var(--white-color);
   cursor: pointer;
@@ -120,6 +119,13 @@
   background-color: #f8f9fa;
 }
 
+.info-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .search-item-img-wrapper {
   width: 100%;
   height: 200px;
@@ -129,48 +135,32 @@
   height: 100%;
   object-fit: cover;
 }
-.search-item-title {
-  margin-left: 5px;
-  font-size: 18px;
-}
-.search-item-price {
-  font-size: 20px;
-  font-weight: bold;
-}
-.search-item-date {
-  font-size: 12px;
-  color: var(--gray-color);
-}
-.image-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.workshop-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 5px;
-  object-fit: cover;
-}
-
-.info-wrapper {
-  width: 100%;
-}
 
 .info-items {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-.workshop-name {
-  font-size: 25px;
-  color: var(--red-color);
+
+.search-item-title {
+  font-size: 18px;
+  line-height: 1.5;
+}
+.search-item-price {
+  font-size: 20px;
   font-weight: bold;
+}
+.search-item-bottm {
+  font-size: 12px;
+  color: var(--gray-color);
+  line-height: 1.5;
+}
+.search-item-date {
+}
+.image-wrapper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .info-item-wrapper {
@@ -212,9 +202,6 @@
 
   .search-results-sidebar-wrapper {
     position: unset;
-  }
-  .workshop-name {
-    font-size: 20px;
   }
 
   .search-results-main-items {
