--- a/client/src/pages/ad/ad.css
+++ b/client/src/pages/ad/ad.css
@@ -77,6 +77,7 @@
   color: white;
   background-color: #4caf50;
   cursor: unset;
+  text-wrap: wrap;
 }
 
 .ad-edit {
@@ -105,6 +106,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .ad-details-bottom {
@@ -576,6 +578,20 @@
   .add-ad-select-wrapper,
   .edit-ad-select-wrapper {
     flex-direction: column;
+  }
+  .ad-options {
+    gap: 5px;
+    justify-content: center;
+  }
+
+  .ad-option {
+    flex: none;
+    padding: 5px;
+    font-size: 12px;
+  }
+
+  .ad-status {
+    font-size: 12px;
   }
 }
 
