--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -86,6 +86,20 @@
   gap: 20px;
 }
 
+/* Media Query */
+
+@media (max-width: 720px) {
+  .user-ads {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 590px) {
+  .user-ads {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 @media (max-width: 520px) {
   .user-profile-settings-form-labels {
     font-size: 10px;
