--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,14 +53,14 @@ code {
 }
 
 /* Scrollbar Classes For Google Chrome */
-html::-webkit-scrollbar {
-  width: 6px;
+/* html::-webkit-scrollbar {
+  width: 10px;
 }
 
 html::-webkit-scrollbar-track {
-  /* background-color: rgb(255, 253, 147); */
+  background-color: rgb(255, 253, 147);
 }
 
 html::-webkit-scrollbar-thumb {
   background-color: var(--lighted-primary-color);
-}
+} */
