--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,34 +1,38 @@
+/* Main header and fixed header styles */
 .fixed-header,
 .header {
   height: 70px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 20px;
+  background-color: #fafafa80;
+  backdrop-filter: blur(80px);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  padding: 20px;
 }
 
 .fixed-header {
-  background-color: #fafafa80;
-  backdrop-filter: blur(80px);
   position: sticky;
   top: 0;
   z-index: 10;
 }
 
-.header {
-  background-color: #fafafa;
-  backdrop-filter: blur(6px);
+.header-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 
+/* Header left styles */
 .header-left {
   display: flex;
-  gap: 50px;
+  gap: 20px;
   align-items: center;
 }
 
 .site-name {
-  font-size: 30px;
+  font-size: 24px;
   font-weight: bold;
   color: var(--dark-color);
 }
@@ -36,7 +40,7 @@
 .navbar-sell {
   background-color: var(--primary-color);
   color: var(--white-color);
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 10px;
   font-weight: 700;
   font-size: 14px;
@@ -50,57 +54,58 @@
   text-decoration: none;
 }
 
+/* Navbar styles */
 .navbar {
-  height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .navbar ul {
   list-style: none;
   display: flex;
-  justify-content: center;
-  flex-direction: row-reverse;
   gap: 20px;
 }
 
-.navbar ul a {
-  cursor: pointer;
-  color: var(--dark-color);
-  font-size: 20px;
-  text-decoration: none;
+.navbar ul li {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
-.navbar ul a:hover {
+.navbar ul li a {
+  cursor: pointer;
+  color: var(--dark-color);
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.navbar ul li a:hover {
   color: var(--lighted-primary-color);
 }
 
 .nav-auth-links {
-  display: none;
+  display: flex;
+  gap: 10px;
 }
 
+/* Header right styles */
 .header-right {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   gap: 20px;
 }
 
 .header-auth-links {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 
 .header-right .auth-link {
   background-color: transparent;
   cursor: pointer;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   color: var(--dark-color);
-  text-align: center;
 }
 
 .header-right a:hover {
@@ -109,7 +114,7 @@
 
 .user-settings {
   color: var(--dark-color);
-  font-size: 20px;
+  font-size: 16px;
   cursor: pointer;
   position: relative;
   display: flex;
@@ -119,11 +124,11 @@
 .user-menu {
   position: absolute;
   display: none;
-  padding: 5px;
+  padding: 10px;
   background-color: var(--white-color);
   border-radius: 5px;
   top: 50px;
-  right: 80px;
+  right: 0;
   width: 140px;
   z-index: 10;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -131,10 +136,9 @@
 
 .user-menu .user-menu-item {
   color: var(--dark-color);
-  padding: 5px;
+  padding: 5px 0;
   text-align: center;
   display: block;
-  border-bottom: 1px solid var(--dark-color);
   cursor: pointer;
   text-decoration: none;
   transition: background-color 0.1s ease-in-out;
@@ -149,21 +153,36 @@
   display: none;
 }
 
-.header-menu i {
-  font-size: 30px;
-  color: var(--dark-color);
-  cursor: pointer;
+.header-user-image {
+  display: flex;
+  width: 40px;
+  height: 40px;
 }
 
-/* Media Query */
+.header-user-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: contain;
+}
+
+/* Media queries */
 @media (max-width: 720px) {
-  .header-menu {
-    display: block;
+  .fixed-header {
+    height: 100px;
+  }
+  .header-container {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
   }
 
   .navbar {
+    align-items: flex-start;
+    background-color: #fafafa;
+    padding: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     position: absolute;
-    background-color: rgb(250, 250, 250);
     left: 0;
     top: 100%;
     width: 100%;
@@ -176,29 +195,38 @@
 
   .navbar ul {
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-    padding: 20px;
+    width: 100%;
+    gap: 10px;
   }
 
-  .navbar ul a {
+  .navbar ul li {
     width: 100%;
-    text-align: start;
+  }
+
+  .navbar ul li a {
+    width: 100%;
+    text-align: left;
+    padding: 10px 0;
+  }
+
+  .header-menu {
+    display: block;
+    margin-left: auto;
+  }
+
+  .header-right {
+    width: 100%;
     justify-content: flex-end;
   }
 
-  .header-right .auth-link {
-    font-size: 16px;
+  .header-auth-links {
+    flex-direction: column;
+    gap: 10px;
   }
 
   .nav-auth-links {
-    display: flex;
     flex-direction: column;
-    gap: 20px;
-  }
-
-  .header-auth-links {
-    display: none;
+    gap: 10px;
   }
 }
 
