--- a/client/src/pages/ad/ad.css
+++ b/client/src/pages/ad/ad.css
@@ -7,20 +7,21 @@
   background-color: #f0f2f5;
   padding: 20px;
 }
+
 .ad-wrapper {
   display: flex;
   gap: 20px;
 }
+
 .ad-info-section {
   flex: 7;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  max-width: 800px;
 }
 
 .ad-photos {
-  width: 100%;
+  width: 800px;
   height: 400px;
   border-radius: 10px;
   overflow: hidden;
@@ -44,7 +45,8 @@
   border-radius: 14px;
   padding: 0 10px;
   background-color: #ffffffcc;
-  right: 50%;
+  right: 50% !important;
+  left: 50% !important;
 }
 
 .ad-photo {
@@ -213,15 +215,30 @@
 
 .contact-info-title {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 18px;
   color: #333;
+}
+
+.seller-info-wrapper {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+  flex-wrap: wrap;
+}
+
+.seller-image {
+  width: 70px;
 }
 
 .seller-name {
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 10px;
+}
+
+.seller-bio {
+  font-size: 12px;
+  color: #757575;
 }
 
 .seller-profile {
@@ -300,6 +317,36 @@
 .modal-ads-wrapper {
   display: flex;
   flex-direction: column;
+}
+
+.rejection-message {
+  display: flex;
+  align-items: center;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px 0;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  gap: 5px;
+}
+
+.rejection-icon {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+.rejection-text {
+  display: flex;
+  gap: 10px;
+}
+
+.rejection-text .rejection-text-title {
+  text-wrap: nowrap;
+  margin: auto;
 }
 
 /* Add Ad Styles */
@@ -440,7 +487,7 @@
 }
 
 .add-ad-form-btn {
-  background-color: var(--primary-color);
+  background-color: var(--green-color);
   font-family: var(--font-family);
   width: fit-content;
   align-self: center;
@@ -453,7 +500,7 @@
 }
 
 .add-ad-form-btn:hover {
-  background-color: #b30000;
+  background-color: #2ecc71;
 }
 
 .dropzone.hidden-dropzone {
@@ -663,10 +710,11 @@
   }
 }
 
-@media (max-width: 980px) {
+@media (max-width: 1105px) {
   .ad-wrapper {
     flex-direction: column;
   }
+
   .ad-photos {
     width: 100%;
   }
