--- a/server/views/varificationmail.handlebars
+++ b/server/views/varificationmail.handlebars
@@ -125,12 +125,11 @@
           >
             <tr>
               <td class="email-masthead">
-                <a
-                  href="https://example.com"
+                <p
                   class="f-fallback email-masthead_name"
                 >
-                  Scratchup
-                </a>
+                  Clarky | كلاركي
+                </p>
               </td>
             </tr>
             <!-- Email Body -->
@@ -156,7 +155,7 @@
                         <h1>Hi {{name}},</h1>
                         <p>Thanks for signing up.
                           <br />
-                          <strong>Someone tried to create a Scratchup account using this email address. If you are the one who tried to do this, please confirm your account..</strong></p>
+                          <strong>Someone tried to create a Clarky account using this email address. If you are the one who tried to do this, please confirm your account..</strong></p>
                         <!-- Action -->
                         <table
                           class="body-action"
@@ -188,7 +187,7 @@
                         </table>
                         <p>The code will expire in 10 minutes.</p>
                         <p>Thanks,
-                          <br />The Scratchup team</p>
+                          <br />The Clarky team</p>
                       </div>
                     </td>
                   </tr>
