--- a/client/src/pages/ad/ad.css
+++ b/client/src/pages/ad/ad.css
@@ -224,11 +224,14 @@
   display: flex;
   gap: 10px;
   margin-bottom: 10px;
-  flex-wrap: wrap;
+  align-items: center;
 }
 
 .seller-image {
   width: 70px;
+  height: 70px;
+  border: 1px solid black;
+  border-radius: 50%;
 }
 
 .seller-name {
@@ -295,7 +298,6 @@
 .modal-body {
   display: flex;
   flex-direction: column;
-  gap: 10px;
   align-items: center;
 }
 
@@ -317,6 +319,9 @@
 .modal-ads-wrapper {
   display: flex;
   flex-direction: column;
+  gap: 15px;
+  width: 100%;
+  max-width: 400px;
 }
 
 .rejection-message {
