--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,11 +1,10 @@
 .home {
   display: flex;
   flex-direction: column;
-  align-items: center;
   font-family: Arial, sans-serif;
 }
 
-.home-top {
+.home-search {
   width: 100%;
   background-image: url("../../assets/clark-7.jpg");
   background-repeat: no-repeat;
@@ -153,6 +152,27 @@
   cursor: pointer;
 }
 
+.home-categories {
+  display: flex;
+  justify-content: space-around;
+  padding: 40px 0;
+  align-items: center;
+}
+
+.home-category {
+  text-align: center;
+  font-size: 18px;
+  /* border: 1px solid black; */
+  padding: 10px 25px;
+  cursor: pointer;
+  border-radius: 30px;
+  background-color: #eeeeee96;
+}
+
+.home-category:hover {
+  background-color: #eee;
+}
+
 /* Media Query */
 @media (max-width: 650px) {
   .home-top-title {
@@ -189,5 +209,10 @@
 
   .home-about-app {
     flex-direction: column;
+  }
+
+  .home-categories {
+    flex-direction: column;
+    gap: 30px;
   }
 }
