--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -26,7 +26,7 @@
 
 .user-ads {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 10px;
 }
 
@@ -159,18 +159,4 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-}
-
-/* Media Query */
-
-@media (max-width: 720px) {
-  .user-ads {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 590px) {
-  .user-ads {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
