--- a/server/views/forgotpasswordmail.handlebars
+++ b/server/views/forgotpasswordmail.handlebars
@@ -126,12 +126,11 @@
           >
             <tr>
               <td class="email-masthead">
-                <a
-                  href="https://example.com"
+                <p
                   class="f-fallback email-masthead_name"
                 >
-                  Scratchup
-                </a>
+                  Clarky | كلاركي
+                </p>
               </td>
             </tr>
             <!-- Email Body -->
@@ -156,7 +155,7 @@
                       <div class="f-fallback">
                         <h1>Hi {{name}},</h1>
                         <p>You recently requested to reset your password for
-                          your Scratchup account. Use the button below to reset
+                          your Clarky account. Use the button below to reset
                           it.
                           <strong>This password reset is only valid for the next
                             10 minutes.</strong></p>
@@ -193,7 +192,7 @@
                           ignore this email or contact support if you have
                           questions.</p>
                         <p>Thanks,
-                          <br />The Scratchup team</p>
+                          <br />The Clarky team</p>
                       </div>
                     </td>
                   </tr>
