--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -130,6 +130,10 @@
   border-radius: 5px;
 }
 
+.form-bio {
+  height: 150px;
+}
+
 .form-input[type="file"] {
   padding: 0;
 }
@@ -155,8 +159,8 @@
   background-color: #219150;
 }
 
-.ad_posts {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+@media (max-width: 768px) {
+  .form-bio {
+    height: 100px;
+  }
 }
