--- a/client/src/pages/ad/ad.css
+++ b/client/src/pages/ad/ad.css
@@ -279,26 +279,32 @@
 
 .modal-content {
   background-color: #fff;
-  padding: 20px;
   border-radius: 10px;
   width: 60%;
   max-height: 80%;
   overflow-y: auto;
   position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: var(--white-color);
 }
 
 .modal-body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0px 20px 20px 20px;
 }
 
 .close-icon {
