--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -3,18 +3,18 @@
 .header {
   height: 70px;
   display: flex;
+  position: sticky;
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
   background-color: #fafafa80;
   backdrop-filter: blur(80px);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
 
 .fixed-header {
-  position: sticky;
   top: 0;
-  z-index: 10;
 }
 
 .header-container {
@@ -120,27 +120,33 @@
   align-items: center;
 }
 
-.user-menu {
+.user-menu,
+.user-notifications {
   position: absolute;
   display: none;
+  flex-direction: column;
   padding: 10px;
   background-color: var(--white-color);
   border-radius: 5px;
   top: 50px;
   right: 0;
   width: 140px;
-  z-index: 10;
+  z-index: 20;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-.user-menu .user-menu-item {
+.user-menu .user-menu-item,
+.user-notifications-item {
   color: var(--dark-color);
   padding: 5px 0;
-  text-align: center;
   display: block;
   cursor: pointer;
   text-decoration: none;
   transition: background-color 0.1s ease-in-out;
+}
+
+.user-menu .user-menu-item {
+  text-align: center;
 }
 
 .user-menu .user-menu-item:hover {
@@ -164,10 +170,99 @@
   border-radius: 50%;
   object-fit: contain;
 }
+.notification-wrapper {
+  position: relative;
+  border-radius: 50%;
+}
+.notification-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.notification-icon:hover {
+  background-color: #f0f0f0;
+}
+
+.unread-notifications-number {
+  position: absolute;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 14px;
+  height: 14px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 11px;
+  top: 2px;
+  right: 5px;
+}
+
+.user-notifications {
+  width: 300px;
+  height: 330px;
+  overflow-y: scroll;
+  padding: 0;
+}
+
+.user-notifications::-webkit-scrollbar {
+  width: 5px;
+}
+
+.user-notifications::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+}
+
+.user-no-notifications {
+  text-align: center;
+}
+
+.user-notifications-item {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.user-notifications-item-title {
+  background-color: #eee;
+  border-radius: 5px;
+  padding: 1px 5px;
+  width: fit-content;
+  font-size: 11px;
+  color: var(--white-color);
+}
+.user-notifications-item-ad {
+}
+.user-notifications-item-date {
+  font-size: 11px;
+  color: var(--gray-color);
+}
+
+.load-more-button {
+  color: #333;
+  background-color: white;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  width: 100%;
+}
+
+.load-more-button:hover {
+  background-color: #eee;
+}
 
 /* Media queries */
-@media (max-width: 720px) {
-  .fixed-header {
+@media (max-width: 800px) {
+  .fixed-header,
+  .header {
     height: 100px;
   }
   .header-container {
@@ -195,7 +290,7 @@
   .navbar ul {
     flex-direction: column;
     width: 100%;
-    gap: 10px;
+    gap: 0px;
   }
 
   .navbar ul li {
@@ -225,6 +320,10 @@
     display: flex !important;
     flex-direction: column;
   }
+
+  .user-notifications {
+    left: 0;
+  }
 }
 
 @media (max-width: 410px) {
@@ -234,6 +333,11 @@
 
   .header-right {
     gap: 10px;
+  }
+
+  .user-notifications {
+    width: 250px;
+    left: -20px;
   }
 }
 
