--- a/server/views/forgotpasswordmail.handlebars
+++ b/server/views/forgotpasswordmail.handlebars
@@ -106,8 +106,7 @@
   <![endif]-->
   </head>
   <body>
-    <span class="preheader">Use this link to reset your password. The link is
-      only valid for 10 minutes.</span>
+    <span class="preheader">استخدم هذا الرابط لإعادة تعيين كلمة المرور الخاصة بك. الرابط صالح لمدة 10 دقائق فقط.</span>
     <table
       class="email-wrapper"
       width="100%"
@@ -129,7 +128,7 @@
                 <p
                   class="f-fallback email-masthead_name"
                 >
-                  Clarky | كلاركي
+                  كلاركي | Clarky
                 </p>
               </td>
             </tr>
@@ -153,12 +152,9 @@
                   <tr>
                     <td class="content-cell">
                       <div class="f-fallback">
-                        <h1>Hi {{name}},</h1>
-                        <p>You recently requested to reset your password for
-                          your Clarky account. Use the button below to reset
-                          it.
-                          <strong>This password reset is only valid for the next
-                            10 minutes.</strong></p>
+                        <h1>مرحبًا {{name}},</h1>
+                        <p>لقد طلبت مؤخرًا إعادة تعيين كلمة المرور لحساب كلاركي الخاص بك. استخدم الرابط أدناه لإعادة تعيينها.
+                          <strong>هذا الرابط صالح لمدة 10 دقائق فقط.</strong></p>
                         <!-- Action -->
                         <table
                           class="body-action"
@@ -188,11 +184,9 @@
                             </td>
                           </tr>
                         </table>
-                        <p>If you did not request a password reset, please
-                          ignore this email or contact support if you have
-                          questions.</p>
-                        <p>Thanks,
-                          <br />The Clarky team</p>
+                        <p>إذا لم تطلب إعادة تعيين كلمة المرور، يرجى تجاهل هذا البريد الإلكتروني أو الاتصال بالدعم إذا كان لديك أي استفسارات.</p>
+                        <p>شكرًا،
+                          <br />فريق كلاركي</p>
                       </div>
                     </td>
                   </tr>
