--- a/server/views/varificationmail.handlebars
+++ b/server/views/varificationmail.handlebars
@@ -17,9 +17,9 @@
       hidden; } /* Type ------------------------------ */ body, td, th {
       font-family: "Nunito Sans", Helvetica, Arial, sans-serif; } h1 {
       margin-top: 0; color: #333333; font-size: 22px; font-weight: bold;
-      text-align: left; } h2 { margin-top: 0; color: #333333; font-size: 16px;
-      font-weight: bold; text-align: left; } h3 { margin-top: 0; color: #333333;
-      font-size: 14px; font-weight: bold; text-align: left; } td, th {
+      text-align: right; } h2 { margin-top: 0; color: #333333; font-size: 16px;
+      font-weight: bold; text-align: right; } h3 { margin-top: 0; color: #333333;
+      font-size: 14px; font-weight: bold; text-align: right; } td, th {
       font-size: 16px; } p, ul, ol, blockquote { margin: .4em 0 1.1875em;
       font-size: 16px; line-height: 1.625; } p.sub { font-size: 13px; } /*
       Utilities ------------------------------ */ .align-right { text-align:
@@ -88,6 +88,8 @@
       border-top: 1px solid #EAEAEC; } .content-cell { padding: 45px; } /*Media
       Queries ------------------------------ */ @media only screen and
       (max-width: 600px) { .email-body_inner, .email-footer { width: 100%
+
+
       !important; } } @media (prefers-color-scheme: dark) { body, .email-body,
       .email-body_inner, .email-content, .email-wrapper, .email-masthead,
       .email-footer { background-color: #333333 !important; color: #FFF
@@ -106,7 +108,7 @@
   <![endif]-->
   </head>
   <body>
-    <span class="preheader">Verify your email address now</span>
+    <span class="preheader">قم بالتحقق من بريدك الإلكتروني الآن</span>
     <table
       class="email-wrapper"
       width="100%"
@@ -128,7 +130,7 @@
                 <p
                   class="f-fallback email-masthead_name"
                 >
-                  Clarky | كلاركي
+                  كلاركي | Clarky
                 </p>
               </td>
             </tr>
@@ -152,10 +154,11 @@
                   <tr>
                     <td class="content-cell">
                       <div class="f-fallback">
-                        <h1>Hi {{name}},</h1>
-                        <p>Thanks for signing up.
+                        <h1>مرحبًا {{name}},</h1>
+                        <p>شكرًا لتسجيلك.
                           <br />
-                          <strong>Someone tried to create a Clarky account using this email address. If you are the one who tried to do this, please confirm your account..</strong></p>
+                          <strong>حاول شخص ما إنشاء حساب كلاركي باستخدام هذا البريد الإلكتروني. إذا كنت أنت من حاول القيام بذلك، يرجى تأكيد حسابك من خلال الضغط علي هذا الرابط:
+                          </strong></p>
                         <!-- Action -->
                         <table
                           class="body-action"
@@ -185,9 +188,9 @@
                             </td>
                           </tr>
                         </table>
-                        <p>The code will expire in 10 minutes.</p>
-                        <p>Thanks,
-                          <br />The Clarky team</p>
+                        <p>ستنتهي صلاحية الرمز خلال 10 دقائق.</p>
+                        <p>شكرًا,
+                          <br />فريق كلاركي</p>
                       </div>
                     </td>
                   </tr>
