added translation for verify account message

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -150,8 +150,7 @@
 }
 
 .user-menu .user-menu-item:hover {
-  background-color: #666;
-  color: var(--white-color);
+  background-color: #eee;
 }
 
 .header-menu {
