added some admin statistics

--- a/server/views/forgotpasswordmail.handlebars
+++ b/server/views/forgotpasswordmail.handlebars
@@ -153,7 +153,7 @@
                     <td class="content-cell">
                       <div class="f-fallback">
                         <h1>مرحبًا {{name}},</h1>
-                        <p>لقد طلبت مؤخرًا إعادة تعيين كلمة المرور لحساب كلاركي الخاص بك. استخدم الرابط أدناه لإعادة تعيينها.
+                        <p>لقد طلبت مؤخرًا إعادة تعيين كلمة المرور لحساب موقع كلاركي الخاص بك. استخدم الرابط أدناه لإعادة تعيينها.
                           <strong>هذا الرابط صالح لمدة 10 دقائق فقط.</strong></p>
                         <!-- Action -->
                         <table
