--- a/server/views/varificationmail.handlebars
+++ b/server/views/varificationmail.handlebars
@@ -157,7 +157,7 @@
                         <h1>مرحبًا {{name}},</h1>
                         <p>شكرًا لتسجيلك.
                           <br />
-                          <strong>حاول شخص ما إنشاء حساب كلاركي باستخدام هذا البريد الإلكتروني. إذا كنت أنت من حاول القيام بذلك، يرجى تفعيل حسابك من خلال الضغط علي هذا الرابط:
+                          <strong>حاول شخص ما إنشاء حساب على موقع كلاركي باستخدام هذا البريد الإلكتروني. إذا كنت أنت من حاول القيام بذلك، يرجى تفعيل حسابك من خلال الضغط علي هذا الرابط:
                           </strong></p>
                         <!-- Action -->
                         <table
