--- a/client/src/pages/ad/ad.css
+++ b/client/src/pages/ad/ad.css
@@ -8,7 +8,7 @@
   padding: 20px;
 }
 
-.ad-wrapper {
+.ad-details-wrapper {
   display: flex;
   gap: 20px;
 }
@@ -697,7 +697,7 @@
 }
 
 @media (max-width: 1105px) {
-  .ad-wrapper {
+  .ad-details-wrapper {
     flex-direction: column;
   }
 
